fix: Routing jump error (#4320)
Closes #4254



Submit a pull request for this project.

<!-- 如果这个Pull Request有对应的Issue，你可以复制Issue的相关信息。 -->

# Why? 
<!-- 
> 对应哪个issue?
> 为什么要这个pull request？
> 背景故事或原因是怎样的？
> 你理解的业务需求是怎样的？ 
-->


# What?
<!-- 
> 这是一个什么Pull Request？
> 描述一下是什么？
> 对哪些人有好处？ 
-->


# How?
<!-- 
> 大概描述下，如何具体实现的这个Pull Request？ 
-->

--- a/packages/datasheet/src/pc/components/space_manage/space_info/style.module.less
+++ b/packages/datasheet/src/pc/components/space_manage/space_info/style.module.less
@@ -69,10 +69,10 @@
   }
 
   &.goldTag {
-    background: var(--orange_50);
+    background: var(--rainbowOrange1);
 
     .text {
-      color: var(--orange_800);
+      color: var(--rainbowOrange5);
     }
   }
 
